# sentry-qml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/dependencies/: qt-lts.properties  qt-stable.properties  self-hosted.properties
.github/scripts/: export-sentry-self-hosted-bundle.sh  restore-sentry-self-hosted-bundle.sh  sentry-self-hosted-bundle-image.sh
.github/workflows/: ci.yml  e2e.yml  self-hosted.yml  update-deps.yml
cmake/: android.cmake  cocoa.cmake  ios.cmake  native.cmake  sentry-cocoa.cmake  wasm.cmake
example/: AppState.qml  AppTheme.qml  CMakeLists.txt  FeedbackPopup.qml  InitPage.qml  Main.qml  PageHeader.qml  RuntimePage.qml  ScopeEditorPopup.qml  StatusBanner.qml  main.cpp
example/controls/: ActionButton.qml  BackButton.qml  ComboChevron.qml  EnvelopeIcon.qml  FloatingActionButton.qml  Icon.qml  IconToolButton.qml  LabeledDoubleSpinBox.qml  LabeledSpinBox.qml  LabeledTextField.qml  Panel.qml  Pill.qml
example/styles/Violet/: ApplicationWindow.qml  Button.qml  CheckBox.qml  ComboBox.qml  DoubleSpinBox.qml  ItemDelegate.qml  Label.qml  Popup.qml  ScrollBar.qml  ScrollView.qml  SpinBox.qml  StackView.qml  TabButton.qml  TextArea.qml  TextField.qml  Theme.qml  ToolButton.qml  ToolTip.qml  qmldir
include/SentryQml/: sentry.h  sentryattachment.h  sentryhint.h  sentryoptions.h  sentryqmlglobal.h  sentryuser.h
include/SentryQml/private/: sentryevent_p.h  sentryhint_p.h  sentrynativesdk_p.h  sentryqmlengine_p.h  sentryscreenshot_p.h  sentrysdk_p.h  sentryviewhierarchy_p.h
modules/: qt-latest.properties  qt-lts.properties  self-hosted.properties
scripts/: update-qt-workflows.sh  update-self-hosted.sh
src/: CMakeLists.txt  sentry.cpp  sentryattachment.cpp  sentrybackend_p.h  sentryevent.cpp  sentryhint.cpp  sentrynativesdk.cpp  sentryoptions.cpp  sentryqmlengine.cpp  sentryqtlogging.cpp  sentryqttransport.cpp  sentryscreenshot.cpp  sentryuser.cpp  sentryviewhierarchy.cpp
src/android/: sentryandroidsdk.cpp
src/android/java/io/sentry/qml/: SentryQmlBridge.java
src/android/package/qt6_10/app/: AndroidManifest.xml.in
src/android/package/qt6_8/: AndroidManifest.xml  build.gradle.in
src/cocoa/: sentrycocoasdk.cpp  sentryobjcbridge.mm  sentryobjcbridge_p.h
src/native/: sentrynativebackend.cpp  sentrynativesdk.cpp  sentryqtscreenshot.cpp  sentryqttransport.cpp
src/wasm/: sentrywasmsdk.cpp
tests/: CMakeLists.txt  httpbody_p.h  run_qtest.cmake  sentryqmltest.h  tst_crash.cpp  tst_e2e.cpp  tst_integration.cpp  tst_sentryqml.cpp  tst_unit.cpp
tests/e2e/: E2EApp.qml  Integration.Tests.ps1  e2e_app.cpp  sentry_self_hosted.py
tests/e2e/wasm/: package-lock.json  package.json  run-action.mjs  run-qttest.mjs  sentry-browser.js
tests/ios/: run_simulator_test.sh
tests/qml/: CrashTest.qml  E2ETest.qml  IntegrationTest.qml  ScreenshotTest.qml  ViewHierarchyTest.qml
